<resources>
    <string name="app_name">Fabflix</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="todo">TODO</string>
    <string name="title_activity_index">index</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="result_per_page">Result Per Page:</string>
    <string name="results_per_page">Results Per Page:</string>
    <string name="_100">100</string>
    <string name="_25">25</string>
    <string name="_50">50</string>
    <string name="title">Title</string>
    <string name="director">Director</string>
    <string name="genres">Genres</string>
    <string name="stars">Stars</string>
    <string name="year">year</string>
    <string-array name="movies">
        <item>Star Wars</item>
        <item>The Godfather</item>
        <item>The Dark Knight</item>
        <item>Shawshank Redemption</item>
        <item>Star Wars</item>
        <item>The Godfather</item>
        <item>The Dark Knight</item>
        <item>Shawshank Redemption</item>
        <item>Star Wars</item>
        <item>The Godfather</item>
        <item>The Dark Knight</item>
        <item>Shawshank Redemption</item>
    </string-array>
</resources>
