<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".login">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="220dp"
        android:layout_height="151dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        app:srcCompat="@drawable/login"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="83dp"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/email"
        android:layout_width="200sp"
        android:layout_height="40sp"
        android:layout_centerInParent="true"
        android:background="#11000000"
        android:drawableLeft="@drawable/email"
        android:drawableStart="@drawable/email"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#fff"
        android:textColorHint="#bdc3c7"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="200sp"
        android:layout_height="40sp"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true"
        android:background="#11000000"
        android:drawableLeft="@drawable/password"
        android:drawableStart="@drawable/password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#fff"
        android:textColorHint="#bdc3c7"
        android:textSize="16sp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="250sp"
        android:layout_height="50sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="137dp"
        android:background="@color/colorLoginButton"
        android:onClick="login"
        android:text="@string/login"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/errorMessage"
        android:layout_width="202dp"
        android:layout_height="32dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="95dp"
        android:textColor="@android:color/holo_red_light" />

</RelativeLayout>